fix php-fpm.sock config

--- a/webdev-php/Dockerfile
+++ b/webdev-php/Dockerfile
@@ -21,12 +21,13 @@ RUN curl -sL https://packages.sury.org/php/apt.gpg | apt-key add - \
     nginx \
     php$PHP_VERSION-dev php$PHP_VERSION-fpm php$PHP_VERSION-mysql php$PHP_VERSION-mbstring php$PHP_VERSION-curl php$PHP_VERSION-xml php$PHP_VERSION-zip \
     php-xdebug \
-    && mkdir -p /var/run/php-fpm && touch /var/run/php-fpm/php-fpm.sock && chown owl:owl /var/run/php-fpm/php-fpm.sock \
+    && mkdir -p /var/run/php-fpm && touch /var/run/php-fpm/php-fpm.sock && chown www-data:www-data /var/run/php-fpm/php-fpm.sock \
     && curl -sL https://getcomposer.org/installer | php && mv composer.phar /usr/local/bin/composer \
     && mkdir /var/www/.composer && chown owl:owl /var/www/.composer && chmod 750 /var/www/.composer \
     && sed -i 's/;cgi.fix_pathinfo=1/cgi.fix_pathinfo=0/' /etc/php/$PHP_VERSION/fpm/php.ini \
     && sed -i 's/error_reporting = E_ALL & ~E_DEPRECATED & ~E_STRICT/error_reporting = E_ALL/' /etc/php/$PHP_VERSION/fpm/php.ini \
-    && sed -i 's/display_errors = Off/display_errors = On/' /etc/php/$PHP_VERSION/fpm/php.ini
+    && sed -i 's/display_errors = Off/display_errors = On/' /etc/php/$PHP_VERSION/fpm/php.ini \
+    && sed -i 's/listen = \/run\/php\/php7.2-fpm.sock/listen = \/run\/php-fpm\/php-fpm.sock/' /etc/php/$PHP_VERSION/fpm/pool.d/www.conf
 
 # clean up
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
