fix downloading dumpcerts

--- a/davmail/Dockerfile
+++ b/davmail/Dockerfile
@@ -4,12 +4,12 @@ FROM openjdk:8-jre-alpine
 
 RUN   adduser davmail -D \
   && apk add --no-cache ca-certificates wget openssl jq util-linux \
-  &&  mkdir /usr/local/davmail \
+  && mkdir /usr/local/davmail \
   && wget -qO- https://downloads.sourceforge.net/project/davmail/davmail/5.1.0/davmail-5.1.0-2891.zip | busybox unzip -q /tmp/davmail.zip -d /usr/local/davmail - \
   && mkdir /var/log/davmail \
   && chown davmail:davmail /var/log/davmail -R \
-  && wget https://raw.githubusercontent.com/containous/traefik/master/contrib/scripts/dumpcerts.sh -O /opt/dumpcerts.sh \
-  && mkdir -p /opt/certs
+  && mkdir -p /opt/certs \
+  && wget https://raw.githubusercontent.com/containous/traefik/master/contrib/scripts/dumpcerts.sh -O /opt/dumpcerts.sh
 
 COPY run.sh /
 
