fix file-permissions with su-exec

--- a/davmail/Dockerfile
+++ b/davmail/Dockerfile
@@ -3,7 +3,7 @@ FROM openjdk:8-jre-alpine
 # mostly copied from jberrenberg/docker-davmail
 
 RUN   adduser davmail -D \
-  && apk add --no-cache ca-certificates wget openssl jq util-linux \
+  && apk add --no-cache su-exec ca-certificates wget openssl jq util-linux \
   && mkdir /usr/local/davmail \
   && wget -qO- https://downloads.sourceforge.net/project/davmail/davmail/5.1.0/davmail-5.1.0-2891.zip | busybox unzip -q /tmp/davmail.zip -d /usr/local/davmail - \
   && mkdir /var/log/davmail && chown davmail:davmail /var/log/davmail -R \
@@ -19,6 +19,4 @@ EXPOSE        1110
 EXPOSE        1025
 WORKDIR       /usr/local/davmail
 
-USER davmail
-
-CMD /bin/sh /run.sh && /usr/local/davmail/davmail /etc/davmail/davmail.properties
+CMD /bin/sh /run.sh && su-exec davmail:davmail /usr/local/davmail/davmail /etc/davmail/davmail.properties
