--- a/davmail/Dockerfile
+++ b/davmail/Dockerfile
@@ -7,7 +7,7 @@ RUN   adduser davmail -D \
   && mkdir /usr/local/davmail \
   && wget -qO- https://downloads.sourceforge.net/project/davmail/davmail/5.1.0/davmail-5.1.0-2891.zip | busybox unzip -q /tmp/davmail.zip -d /usr/local/davmail - \
   && mkdir /var/log/davmail && chown davmail:davmail /var/log/davmail -R \
-  && mkdir -p /traefik/ssl && chown davmail:davmail /traefik -R \
+  && mkdir -p /traefik/ssl/certs && mkdir /traefik/ssl/private && chown davmail:davmail /traefik -R \
   && wget https://raw.githubusercontent.com/containous/traefik/v1.7/contrib/scripts/dumpcerts.sh -O /traefik/dumpcerts.sh
 
 COPY run.sh /
