--- a/goaccess/docker-compose.yml
+++ b/goaccess/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3.7"
 
 services:
-  davmail:
-    image: https://github.com/owlabout/dockerfiles.git#:davmail
+  goaccess:
+    image: https://github.com/owlabout/dockerfiles.git#:goaccess
     environment:
       - API_KEY
       - DOMAIN
@@ -10,7 +10,3 @@ services:
     volumes:
       - /var/log/traefik/access.log:/access.log
     container_name: goaccess
-
-networks:
-  web:
-    external: true
